--- a/graphics/linux-rl9-dri/Makefile
+++ b/graphics/linux-rl9-dri/Makefile
@@ -1,14 +1,17 @@
 PORTNAME=	dri
-PORTVERSION=	24.1.2
-DISTVERSIONSUFFIX=	-3.el9
+PORTVERSION=	25.0.7
+DISTVERSIONSUFFIX=	-3.el9_7
+PORTREVISION=	1
 CATEGORIES=	graphics linux
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Mesa libGL runtime libraries (Rocky Linux ${LINUX_DIST_VER})
 
+LICENSE=	mit
+
 USES=		linux:rl9
 USE_LDCONFIG=	yes
-USE_LINUX=	elfutils-libelf expat libdrm libglvnd llvm wayland xorglibs
+USE_LINUX=	elfutils-libelf expat libdrm libglvnd llvm spirv-tools wayland xorglibs
 USE_LINUX_RPM=	yes
 WANT_LINUX32=	yes
 
@@ -17,8 +20,8 @@ LIB_DISTNAMES=	freeglut-3.2.1-10.el9 \
 		mesa-libEGL-${DISTVERSIONFULL} \
 		mesa-libGL-${DISTVERSIONFULL} \
 		mesa-libGLU-9.0.1-6.el9 \
-		mesa-libgbm-${DISTVERSIONFULL} \
-		mesa-libglapi-${DISTVERSIONFULL}
+		mesa-libgbm-${DISTVERSIONFULL}
+#		mesa-libglapi-${DISTVERSIONFULL}
 
 LIB_DISTNAMES_amd64=	m/mesa-vulkan-drivers-${DISTVERSIONFULL} \
 		m/mesa-libxatracker-${DISTVERSIONFULL}
