--- a/archivers/thunar-archive-plugin/Makefile
+++ b/archivers/thunar-archive-plugin/Makefile
@@ -1,30 +1,26 @@
 PORTNAME=	thunar-archive-plugin
-PORTVERSION=	0.5.2
+PORTVERSION=	0.6.0
 CATEGORIES=	archivers xfce
 MASTER_SITES=	XFCE/thunar-plugins
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Archive plugin for the Thunar File Manager
-WWW=		https://goodies.xfce.org/projects/thunar-plugins/thunar-archive-plugin
+WWW=		https://docs.xfce.org/xfce/thunar/archive
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libharfbuzz.so:print/harfbuzz
-
-USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
-		tar:bzip2 xfce
-USE_GNOME=	cairo gdkpixbuf gtk30 intltool
+USES=		compiler:c11 gettext-tools gnome meson pkgconfig tar:xz xfce
+USE_GNOME=	gtk30
 USE_XFCE=	libexo thunar
 
-GNU_CONFIGURE=	yes
-INSTALL_TARGET=	install-strip
+OPTIONS_DEFINE=	NLS
+OPTIONS_SUB=	yes
 
-OPTIONS_DEFINE=		NLS
-OPTIONS_SUB=		yes
+NLS_USES=	gettext-runtime
 
-NLS_CONFIGURE_ENABLE=	nls
-NLS_USES=		gettext-runtime
+post-patch-NLS-off:
+	@${REINPLACE_CMD} -e "/^subdir('po')/d" ${WRKSRC}/meson.build
 
 .include <bsd.port.mk>
