--- a/math/xfce4-calculator-plugin/Makefile
+++ b/math/xfce4-calculator-plugin/Makefile
@@ -1,29 +1,27 @@
 PORTNAME=	xfce4-calculator-plugin
-PORTVERSION=	0.7.1
-PORTREVISION=	1
+PORTVERSION=	0.8.0
 CATEGORIES=	math xfce
 MASTER_SITES=	XFCE/panel-plugins
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple calculator for the Xfce panel
+WWW=		https://docs.xfce.org/panel-plugins/xfce4-calculator-plugin/start
 
 LICENSE=	gpl2
 
-USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
-		tar:bz2 xfce xorg
-USE_GNOME=	cairo gtk30 intltool
-USE_XFCE=	panel
+USES=		compiler:c11 gettext-tools gnome meson pkgconfig tar:xz xfce \
+		xorg
+USE_GNOME=	gtk30
+USE_XFCE=	libmenu panel
 USE_XORG=	x11
-
-GNU_CONFIGURE=	yes
-INSTALLS_ICONS=	yes
-INSTALL_TARGET=	install-strip
 
 OPTIONS_DEFINE=	NLS
 OPTIONS_SUB=	yes
 
-NLS_CONFIGURE_ENABLE=	nls
-NLS_USES=		gettext-runtime
+NLS_USES=	gettext-runtime
+
+post-patch-NLS-off:
+	@${REINPLACE_CMD} -e "/^subdir('po')/d" ${WRKSRC}/meson.build
 
 .include <bsd.port.mk>
