--- a/graphics/libepoxy/Makefile
+++ b/graphics/libepoxy/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	libepoxy
-DISTVERSION=	1.5.9
+DISTVERSION=	1.5.10
 CATEGORIES=	graphics
-MASTER_SITES=	https://github.com/anholt/${PORTNAME}/releases/download/${DISTVERSION}/
+MASTER_SITES=	GNOME
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library to handle OpenGL function pointer management
