--- a/devel/hwloc2/Makefile
+++ b/devel/hwloc2/Makefile
@@ -1,52 +1,65 @@
 PORTNAME=	hwloc
-PORTVERSION=	2.4.1
+DISTVERSION=	2.12.1
+PORTREVISION=	1
 CATEGORIES=	devel
-MASTER_SITES=	https://download.open-mpi.org/release/hwloc/v${PORTVERSION:R}/ \
-		http://icl.cs.utk.edu/open-mpi/software/hwloc/v${PORTVERSION:R}/downloads/
+MASTER_SITES=	https://download.open-mpi.org/release/hwloc/v${DISTVERSION:R}/
 PKGNAMESUFFIX=	2
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Portable Hardware Locality software package
+WWW=		https://www.open-mpi.org/projects/hwloc/
 
 LICENSE=	bsd3
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libpciaccess.so:devel/libpciaccess
 
-USES=		iconv libtool gnome pathfix pkgconfig tar:bzip2
+USES=		cpe gnome iconv libtool pathfix pkgconfig tar:bzip2
+CPE_VENDOR=	open-mpi
 USE_GNOME=	libxml2
+USE_LDCONFIG=	yes
 
-CONFLICTS_INSTALL=	hwloc-[0-9]*
+NO_TEST=	yes
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--enable-static \
+CONFIGURE_ARGS=	--disable-cuda \
+		--disable-gl \
 		--disable-opencl \
-		--disable-cuda \
 		--disable-nvml \
-		--disable-gl
+		--enable-static
+
 INSTALL_TARGET=	install-strip
 TEST_TARGET=	check
-USE_LDCONFIG=	yes
+
+CONFLICTS_INSTALL=	hwloc
 
 PORTDOCS=	*
 
-OPTIONS_DEFINE=	CAIRO DEBUG DOCS
-OPTIONS_SUB=	yes
+OPTIONS_DEFINE=		CAIRO DEBUG DOCS L0
+OPTIONS_DEFAULT=	L0
+OPTIONS_SUB=		yes
 
-CAIRO_CONFIGURE_OFF=	--disable-cairo --without-x
-CAIRO_CONFIGURE_ON=	--enable-cairo --with-x
+L0_DESC=		oneAPI Level Zero device discovery
+
 CAIRO_LIB_DEPENDS=	libcairo.so:graphics/cairo
 CAIRO_USES=		xorg
 CAIRO_USE=		XORG=x11
+CAIRO_CONFIGURE_ON=	--enable-cairo --with-x
+CAIRO_CONFIGURE_OFF=	--disable-cairo --without-x
 
-DEBUG_CONFIGURE_ENABLE=	debug # 'lstopo -' prints a lot of debug details when debug is enabled, this is separate from WITH_DEBUG=yes
+# 'lstopo -' prints a lot of debug details when debug is enabled,
+# this is separate from WITH_DEBUG=yes
+DEBUG_CONFIGURE_ENABLE=	debug
+
+L0_LIB_DEPENDS=		libze_loader.so:devel/level-zero
+L0_CONFIGURE_ENABLE=	levelzero
 
 .include <bsd.port.pre.mk>
 
 .if ${ARCH} != amd64 && ${ARCH} != i386
-PLIST_SUB=	X86="@comment "
+PLIST_SUB+=	X86="@comment "
 .else
-PLIST_SUB=	X86=""
+PLIST_SUB+=	X86=""
 .endif
 
 post-install-DOCS-on:
