--- a/graphics/mesa-libs/Makefile
+++ b/graphics/mesa-libs/Makefile
@@ -8,22 +8,20 @@ WWW=		https://www.mesa3d.org/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/docs/license.rst
 
-LIB_DEPENDS=	libOpenGL.so:graphics/libglvnd
+USES=		llvm:noexport
 
-OPTIONS_GROUP=			PLATFORM
-OPTIONS_GROUP_PLATFORM=		PLATFORM_X11 PLATFORM_WAYLAND
-PLATFORM_X11_DESC=		Enable X11 support for GBM/EGL
-PLATFORM_WAYLAND_DESC=		Enable Wayland support for GBM/EGL
-PLATFORM_WAYLAND_IMPLIES=	WAYLAND
+BUILD_DEPENDS=	libglvnd>=0:graphics/libglvnd
 
-OPTIONS_DEFINE=	WAYLAND ZSTD
-OPTIONS_DEFAULT=WAYLAND PLATFORM_X11 PLATFORM_WAYLAND ZSTD
-OPTIONS_SUB=	yes
-
-WAYLAND_DESC=		Enable support for the Wayland platform in EGL
+OPTIONS_GROUP=		PLATFORM
+OPTIONS_GROUP_PLATFORM=	X11 WAYLAND
+X11_DESC=		Enable X11 support for GBM/EGL
+WAYLAND_DESC=		Enable Wayland support for GBM/EGL
 WAYLAND_BUILD_DEPENDS=	wayland-protocols>=1.8:graphics/wayland-protocols
-WAYLAND_LIB_DEPENDS=	libwayland-egl.so:graphics/wayland
-WAYLAND_IMPLIES=	PLATFORM_WAYLAND
+WAYLAND_LIB_DEPENDS=	libwayland-server.so:graphics/wayland
+
+OPTIONS_DEFINE=		ZSTD
+OPTIONS_DEFAULT=	WAYLAND X11 ZSTD
+OPTIONS_SUB=		yes
 
 ZSTD_DESC=		Use ZSTD for shader cache
 ZSTD_LIB_DEPENDS=	libzstd.so:archivers/zstd
@@ -34,12 +32,8 @@ USE_LDCONFIG=		yes
 .include <bsd.mport.options.mk>
 .include "${.CURDIR:H:H}/graphics/mesa-dri/Makefile.common"
 
-CC=clang${LLVM_DEFAULT}
-CXX=clang++${LLVM_DEFAULT}
-LDFLAGS+=	-L${LOCALBASE}/llvm${LLVM_DEFAULT}/lib
-
-MESON_ARGS+=	-Dgallium-vdpau=disabled \
-		-Dandroid-libbacktrace=disabled \
+MESON_ARGS+=	-Dandroid-libbacktrace=disabled \
+		-Dgallium-vdpau=disabled \
 		-Dgallium-omx=disabled \
 		-Dgallium-va=disabled \
 		-Dgallium-xa=disabled \
@@ -52,11 +46,11 @@ MESON_ARGS+=	-Dgallium-vdpau=disabled \
 		-Degl=enabled \
 		-Dgbm=enabled \
 		-Dvulkan-drivers="" \
-		-Dglvnd=true
+		-Dglvnd=enabled
 # Building EGL and GBM requires a driver so add r300
 MESON_ARGS+=	-Dgallium-drivers="r300"
 
-.if ${PORT_OPTIONS:MPLATFORM_X11}
+.if ${PORT_OPTIONS:MX11}
 MESA_PLATFORMS+=	x11
 USE_XORG+=		xorgproto x11 xcb xdamage xext \
 			xfixes xshmfence xxf86vm xrandr
@@ -66,7 +60,7 @@ MESON_ARGS+=	-Dglx=disabled -Dxlib-lease=disabled
 PLIST_SUB+=	GLX="@comment "
 .endif
 
-.if ${PORT_OPTIONS:MPLATFORM_WAYLAND} && ${PORT_OPTIONS:MWAYLAND}
+.if ${PORT_OPTIONS:MWAYLAND}
 MESA_PLATFORMS+=	wayland
 .endif
 
@@ -76,8 +70,6 @@ MESON_ARGS+=	-Dplatforms="${MESA_PLATFORMS:ts,:tl}"
 # PR230239 Fix the build for i386 when WITH_LLD_IS_LD is set
 LDFLAGS+=-Wl,-z,notext
 .endif
-
-.include "${MASTERDIR}/Makefile.targets"
 
 post-install:
 # Fallback if GLX_EXT_libglvnd is missing or vendor library doesn't exist
