--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -90,6 +90,7 @@
     SUBDIR += pangomm24
     SUBDIR += pangox-compat
     SUBDIR += plasma6-kdeplasma-addons
+    SUBDIR += py-python-xlib
     SUBDIR += py-qt5-charts
     SUBDIR += py-qt5-datavis3d
     SUBDIR += py-tkinter
