--- a/x11-fonts/jetbrains-mono/Makefile
+++ b/x11-fonts/jetbrains-mono/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	jetbrains-mono
-PORTVERSION=	1.0.6
+PORTVERSION=	2.304
 PORTEPOCH=	1
 CATEGORIES=	x11-fonts
 MASTER_SITES=	https://github.com/JetBrains/JetBrainsMono/releases/download/v${PORTVERSION}/
@@ -7,19 +7,20 @@ DISTNAME=	JetBrainsMono-${DISTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Free and open source typeface for developers
+WWW=		https://www.jetbrains.com/lp/mono
 
-LICENSE=	Apache-2.0
+LICENSE=	OFL11
+LICENSE_FILE=	${WRKSRC}/OFL.txt
 
 USES=		fonts zip
 
-WRKSRC=	${WRKDIR}/JetBrainsMono-${PORTVERSION}
-
 NO_ARCH=	yes
 NO_BUILD=	yes
+NO_WRKSUBDIR=	yes
 
 do-install:
-	@${MKDIR} ${FAKE_DESTDIR}${FONTSDIR}
-	${INSTALL_DATA} ${WRKSRC}/ttf/*.ttf ${FAKE_DESTDIR}${FONTSDIR}
-	${LS} ${FAKE_DESTDIR}${FONTSDIR}/*.ttf | ${SED} -e's,^${FAKE_DESTDIR},,' >> ${TMPPLIST}
+	@${MKDIR} ${FONTSDIR}
+	${INSTALL_DATA} ${WRKSRC}/fonts/ttf/*.ttf ${FONTSDIR}
+	${LS} ${STAGEDIR}${FONTSDIR}/*.ttf | ${SED} -e's,^${FAKE_DESTDIR},,' >> ${TMPPLIST}
 
 .include <bsd.port.mk>
